# neko_gms

./: .commit_rules  .gitignore  CMakeLists.txt  README.md
include/devices/: DeviceManager.h  DeviceService.h  DeviceTypes.h
include/devices/providers/: AdbDeviceProvider.h  DeviceProvider.h  UsbDeviceProvider.h
src/: main.cpp
src/devices/: DeviceManager.cpp  DeviceService.cpp
src/devices/providers/: AdbDeviceProvider.cpp  UsbDeviceProvider.cpp
ui/: FilterPanel.qml  HeaderToolbar.qml  LogView.qml  Main.qml  StatusBar.qml
ui/components/: DevicePicker.qml
ui/log_patterns/: index.js
